--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
       - ./elasticsearch/data:/usr/share/elasticsearch/data
     ports:
-      - "9200:9200"
-      - "9300:9300"
+      - "${ES_INTERNAL_PORT_1}:${ES_EXTERNAL_PORT_1}"
+      - "${ES_INTERNAL_PORT_2}:${ES_EXTERNAL_PORT_2}"
     networks:
       - LLL3_network
     healthcheck:
@@ -32,7 +32,7 @@ services:
     depends_on:
       - elasticsearch
     ports:
-      - "5601:5601"
+      - "${KIBANA_INTERNAL_PORT}:${KIBANA_EXTERNAL_PORT}"
     networks:
       - LLL3_network
     environment:
@@ -46,7 +46,7 @@ services:
       - ./sql:/docker-entrypoint-initdb.d
       - ./db/mysql/data:/var/lib/mysql
     ports:
-      - "3307:3306"
+      - "${DB_INTERNAL_PORT}:${DB_EXTERNAL_PORT}"
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
       - MYSQL_DATABASE=${DATABASE_NAME}
@@ -57,7 +57,7 @@ services:
     image: redis:alpine
     container_name: redis
     ports:
-      - "6379:6379"
+      - "${REDIS_INTERNAL_PORT}:${REDIS_EXTERNAL_PORT}"
     networks:
       - LLL3_network
 
