--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ build/
 .factorypath
 .project
 .settings
+.env
 .springBeans
 .sts4-cache
 bin/
@@ -22,9 +23,11 @@ bin/
 *.iws
 *.iml
 *.ipr
+*.ini
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+db/
 
 ### NetBeans ###
 /nbproject/private/
