--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,10 +53,13 @@ spring:
     password: ${MySQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  elasticsearch:
+    uris: http://localhost:9200
+
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -70,6 +73,7 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
+
 
 
 
@@ -98,6 +102,7 @@ cors:
 logging-level:
   org.hibernate.SQL: debug
   org.hibernate.type: trace
+  org.springframework.data.elasticsearch.client: debug
 
 # info:
 #   web:
