Refactor : uri 고정값 -> 환경변수 값 받아오도록 변경
기존 localhost~~~ -> .env파일에서 가져오도록 변경

Resolves: #3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,7 +54,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   elasticsearch:
-    uris: http://localhost:9200
+    uris: ${ES_URI}
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
