--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// implementation 'org.springframework.boot:spring-boot-starter-batch'
-	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	// runtimeOnly 'com.mysql:mysql-connector-j'
+	 implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	 runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
