Feat: MySQL -> ElasticSearch 데이터 변경 로직 작성 1. 임베딩 값 생성 API 호출 로직 작성함. 2. MySQL 데이터를 불러와서 임베딩 값을 생성함. 3. ElasticSearch 인덱스 구조에 맞게 데이터를 가공함. 4. store_search_doc 인덱스에 가공한 데이터 bulk insert 과정을 거쳐 저장

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: sangchu
+  elk:
+    index-name: ${INDEX_NAME}
 
   profiles:
     active: ${PROFILE}
@@ -46,7 +48,6 @@ spring.config.activate.on-profile: local
 
 spring:
   # 데이터 소스 설정
-
   datasource:
     url: ${MySQL_URL}
     username: ${MySQL_USER}
