--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,13 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// implementation 'org.springframework.boot:spring-boot-starter-batch'
-	 implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	 runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M5'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
