Fix: 임베딩 생성 후 Index 생성 로직 수정 1. Store의 created_at에 DEFAULT값 추가 2. spring ai의 openai 키 설정 추가 3. MySQL에서 Elasticsearch로 데이터를 넣을 때 branch_nm이 없는 데이터만 가져오도록 수정 4. Python 임베딩 서버 불러오도록 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     name: sangchu
   elk:
     index-name: ${INDEX_NAME}
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY}
 
   profiles:
     active: ${PROFILE}
