--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: sangchu
+  elk:
+    index-name: ${INDEX_NAME}
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY}
 
   profiles:
     active: ${PROFILE}
@@ -46,7 +51,6 @@ spring.config.activate.on-profile: local
 
 spring:
   # 데이터 소스 설정
-
   datasource:
     url: ${MySQL_URL}
     username: ${MySQL_USER}
