Fix: DB 타임존, Store 컬럼 길이 수정 1. MySQL 컨테이너의 Timezone을 Asia/Seoul로 수정 2. Store에서 block,floor,room 컬럼의 길이 제한을 50으로 수정 3. gitignore에서 elasticsearch의 데이터 경로를 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - MYSQL_DATABASE=${DATABASE_NAME}
       - MYSQL_USER=${DATABASE_USER}
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+      - TZ=Asia/Seoul
 
   redis:
     image: redis:alpine
