Feat: 트렌드 키워드 검색 로직 구현
1.키워드 입력 로직
2.키워드 임베드 생성 로직
3.Elasticsearch 데이터의 임베드 값이랑 비교하는 로직

Resolves: #9

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,6 +59,7 @@ spring:
 
   elasticsearch:
     uris: ${ES_URI}
+    limit: ${ES_LIMIT}
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
