Fix: 키워드 추출 로직 수정 1. HuggingFace URI 불러오는 과정에서 static 제거 2. my_nori에서 nori_none을 ElasticSearch에 생성하여 해당 analyze 호출 3. request 과정에서 특정 단어 태그를 불러오지 않도록 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: sangchu
   elk:
     index-name: ${INDEX_NAME}
+  huggingface:
+    uri: ${HUGGINGFACE_URI}
   ai:
     openai:
       api-key: ${OPENAI_API_KEY}
