--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M5'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
+	implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
+	implementation 'org.seleniumhq.selenium:selenium-devtools-v135:4.31.0'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
