Feature: 스프링 배치 활용하여 CSV 파일들 비동기적으로 파일 하나씩 잡에 맡겨서 MySQL에 저장 로직

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,11 +52,11 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        use_sql_comments: false
+#    properties:
+#      hibernate:
+#        show_sql: true
+#        format_sql: true
+#        use_sql_comments: false
 
 embed:
   huggingface:
