Feat: 워드클라우드와 꺾은선그래프를 위한 데이터 응답 API 생성 1. 트렌드 분석 결과를 위해 최근 분기 인기있는 키워드 목록 파악 2. 그 후 각 키워드들의 모든 분기의 빈도수 계산 3. 빈도수에서 유사도로 점수를 측정하여 전달하도록 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,7 +101,7 @@ spring:
     uris: http://${MAIN_HOST}:${ES_EXTERNAL_PORT_1}
 
   jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: validate
     properties:
