Feat: 상호명 중복 확인 API 만들기
1. 상호명 중복 확인 API 개발
2. elasticsearch 배치 컨트롤러 최신 분기 파라미터로 받아 저장하도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,10 @@ springdoc:
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
 
+kipris:
+  service-key: ${KIPRIS_SERVICE_KEY}
+  request-url: ${KIPRIS_REQUEST_URL}
+
 # =========================== LOCAL  ===========================
 ---
 spring.config.activate.on-profile: local
@@ -121,6 +125,8 @@ cors:
   allowed-headers: "*"
   allowed-credentials: false
   max-age: 3600
+
+
 
 # info:
 #   web:
