Fix: 파티셔닝을 통해 각 스레드가 다른 범위의 MySQL 데이터를 읽도록 수정 1. 해당 crtrYm의 최대/최소 id값을 찾는 기능 구현 2. 찾은 구역을 스레드 수 만큼 나눠서 역할 분담하게함

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,6 @@ spring:
       port: ${REDIS_EXTERNAL_PORT}
 
   elasticsearch:
-    limit: ${ES_LIMIT}
     index-name: ${INDEX_NAME}
 
   ai:
@@ -95,24 +94,24 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${MAIN_HOST}:${MYSQL_EXTERNAL_PORT}/${MYSQL_DB_NAME}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://${MAIN_HOST}:${MYSQL_EXTERNAL_PORT}/${MYSQL_DB_NAME}?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8
 
   data:
     redis:
       host: ${MAIN_HOST}
 
   elasticsearch:
-    uris: http://${MAIN_HOST}:${ES_EXTERNAL_PORT_1}
+    uris: http://${MAIN_HOST}:${ES_EXTERNAL_PORT_1}/
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: validate
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: false
-        use_sql_comments: false
+#    properties:
+#      hibernate:
+#        show_sql: true
+#        format_sql: false
+#        use_sql_comments: false
 
 embed:
   huggingface:
