--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ java {
 	}
 }
 
+ext {
+	set('springAiVersion', "1.0.0-M6")
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -32,7 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M5'
+	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
 	implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
 	implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
 	implementation 'org.seleniumhq.selenium:selenium-devtools-v135:4.31.0'
@@ -51,6 +55,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+	}
 }
 
 tasks.named('test') {
