Feat: 인프라 배포 환경 Setting
1. 각 컨테이너로 dockerfile 작성
2. .env파일 docker-compose.yml파일과 동일한 위치로 변경

Resolves: #33

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ build/
 .factorypath
 .project
 .settings
-.env
+infra/docker/.env
 .springBeans
 .sts4-cache
 bin/
@@ -27,8 +27,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-db/
-elasticsearch/data/
+infra/db/
+infra/elasticsearch/data/
 src/main/resources/data/
 
 ### NetBeans ###
@@ -42,4 +42,4 @@ src/main/resources/data/
 .vscode/
 
 ### ElasticSearch ###
-elasticsearch/data
+infra/elasticsearch/data
