Feat: yml 에서 타임아웃 증가(30 -> 1200), 중복해서 relevance 가져오는 로직 수정, 한 분기의 데이터에서 cosineSimilarity값을 계산해서 상위 1만개의 데이터로 보여주는 로직으로 변경 Resolves: #38

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,7 +108,8 @@ spring:
 
   elasticsearch:
     uris: http://${MAIN_HOST}:${ES_EXTERNAL_PORT_1}/
-
+    connection-timeout: 1200s
+    socket-timeout: 1200s
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
