--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ build/
 .factorypath
 .project
 .settings
-infra/docker/.env
 .springBeans
 .sts4-cache
 bin/
@@ -27,8 +26,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-infra/db/
-infra/elasticsearch/data/
 src/main/resources/data/
 
 ### NetBeans ###
@@ -43,8 +40,13 @@ src/main/resources/data/
 
 ### ElasticSearch ###
 infra/elasticsearch/data
+infra/local/elasticsearch/data/
 
 ### local ###
 .env
 db
 elasticsearch
+infra/db/
+infra/elasticsearch/data/
+infra/local/.env
+infra/local/db/
