--- a/infra/local/docker-compose.yml
+++ b/infra/local/docker-compose.yml
@@ -73,7 +73,7 @@ services:
   backend:
     build:
       context: ../..
-      dockerfile: infra/docker/dockerfile_backend
+      dockerfile: infra/local/dockerfile_backend
     container_name: SANGCHU
     env_file:
       - .env
@@ -88,7 +88,7 @@ services:
   frontend:
     build:
       context: ../../../LLL3_FRONTEND
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     container_name: frontend
     ports:
       - "3000:80"
