--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,8 @@ spring:
 
   elasticsearch:
     uris: http://${LOCAL_HOST}:${ES_EXTERNAL_PORT_1}/
+    connection-timeout: 600s
+    socket-timeout: 600s
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -108,6 +110,8 @@ spring:
 
   elasticsearch:
     uris: http://${MAIN_HOST}:${ES_EXTERNAL_PORT_1}/
+    connection-timeout: 600s
+    socket-timeout: 600s
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
