Refactor: 인프라 운영 환경에 맞추어 수정 (#46)
* Refactor: local / main_app / main_storage로 인프라 패키지 분리

* Refactor: 임베딩 서버 도커 컨테이너 빌드 시 파일 경로 수정

* Refactor: 운영 환경 임베딩 서버 URI 설정 수정

* Refactor: 서버 Elasticsearch 및 운영 환경 Nginx 타임아웃 설정 수정

* Feat : 깃허브 액션 스크립트 추가

* Refactor: application.yml 내 cors 설정 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,6 +56,8 @@ spring:
 
   elasticsearch:
     uris: http://${LOCAL_HOST}:${ES_EXTERNAL_PORT_1}/
+    connection-timeout: 1200s
+    socket-timeout: 1200s
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -101,6 +103,7 @@ spring:
     uris: http://${MAIN_HOST}:${ES_EXTERNAL_PORT_1}/
     connection-timeout: 1200s
     socket-timeout: 1200s
+
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
@@ -113,7 +116,7 @@ spring:
 
 embed:
   huggingface:
-    uri: ${LOCAL_HUGGINGFACE_URI}
+    uri: ${MAIN_HUGGINGFACE_URI}
 
 
 # info:
