--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
 name: Deploy SANGCHU
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     types: [closed]
     branches: [ main ]
@@ -10,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    if: github.event_name == 'push' || github.event.pull_request.merged == true  || github.event_name == 'workflow_dispatch'
+    if: github.event.pull_request.merged == true  || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +30,7 @@ jobs:
               git reset --hard origin/main
             
               echo "Building Docker service backend..."
-              docker-compose build --no-cache backend
+              docker-compose build --no-cache --force-recreate backend
             
               echo "Starting Docker service backend..."
               docker-compose up -d backend
